# manage_dan

./: .dockerignore  .gitignore  99-printer.rules  CLAUDE.md  Cargo.toml  Dockerfile  In `draw_floating_input`, the block style is currently  README.md  Workspace `Cargo.toml  deploy-frontend.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  tasks.db
Cargo.toml (No changes needed here, as the conflict is specific to the versions defined in `db/: Cargo.toml`)
Let's look at the `app/src/: prelude.rs` file provided
Reviewing the original `printer/src/: printer_error.rs
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/manage_dan/app/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/menu/: main_menu.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: network_security_config.xml
app/: Cargo.toml
app/src/: api.rs  config.rs  error.rs  macros.rs  main.rs  nogo.rs  prelude.rs  test.rs  ui.rs
config/: default.toml  recurring.toml.example  reminders.toml.example
db/: Cargo.toml
db/src/: db_error.rs  db_prelude.rs  lib.rs  models.rs  todo_error.rs
frontend/: index.html  nginx.conf
lists/: Cargo.toml
lists/src/: lib.rs  lists_error.rs  lists_prelude.rs  models.rs
log/: Cargo.toml
log/src/: db_subscriber.rs  db_subscriber.rs (Lines 49-56)  db_subscriber.rs (New File)  lib.rs  log_error.rs  log_prelude.rs
notes/: Cargo.toml
notes/src/: lib.rs  models.rs  monitor.rs  nb_client.rs  notes_error.rs  notes_prelude.rs
printer/: Cargo.toml
printer/src/: lib.rs  printer_error.rs  printer_prelude.rs
project/: Cargo.toml
project/src/: lib.rs  models.rs  project_error.rs  project_prelude.rs
project/tests/: archive_restore_delete.rs
scripts/debug/: nb_move_repro.sh
scripts/dev/: clean_test_pollution.py  run_scratch_instance.sh
shopping/: Cargo.toml
shopping/src/: lib.rs  models.rs  shopping_error.rs  shopping_prelude.rs
src/: database.rs  datatypes.rs  escpos.rs  gui.rs  http_methods.rs  main.rs
tasks/: Cargo.toml
tasks/src/: lib.rs  tasks_error.rs  tasks_prelude.rs
todo/: Cargo.toml
todo/src/: completed_summary.rs  daily_summary.rs  lib.rs  models.rs  monitor.rs  recurring.rs  reminders.rs  todo_error.rs  todo_prelude.rs
todo/src/backends/: mod.rs  nb.rs  vikunja.rs
todo/tests/: completion_log.rs  nb_backend.rs
tui/: Cargo.toml
tui/src/: api.rs  main.rs  ui.rs
vikunja/: Cargo.toml
vikunja/src/: lib.rs  models.rs  vikunja_error.rs
