[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
dotenv = "0.15.0"
itertools = "0.14.0"
html2text = "0.7.1"
ratatui = { version = "0.29.0", features = ["serde", "macros", "scrolling-regions", "all-widgets"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.86"
escpos = { version = "0.17.0", features = ["full"] }
chrono = "0.4.42"
rusqlite = { version = "0.31.0", features = ["bundled"] }
