[workspace]

members = [
    "app",
    "db",
    "log",
    "notes",
    "project",
    "printer",
    "todo",
    "vikunja",
    "tui",
    "lists",
]
default_members = ["/app"]

resolver = "2"

[workspace.package]

version = "0.1.0"
authors = ["DanThomas64"]
description = "I need to organize my life"
edition = "2021"

[workspace.dependencies]

chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.89"
thiserror = "1.0.64"
tracing = "0.1.40"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
config = { version = "0.15.19", features = ["toml"] }
escpos = { version = "0.17.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
toml = "0.8"

