[package]
name = "app"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
db = { path = "../db" }
log = { path = "../log" }
notes = { path = "../notes" }
project = { path = "../project" }
tasks = { path = "../tasks" }
todo = { path = "../todo" }
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
tokio.workspace = true
