[package]
name = "db"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror = { workspace = true }
tracing = { workspace = true}
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokio-rusqlite = "0.7.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
chrono.workspace = true
