[package]
name = "lists"
version = "0.3.0"
authors.workspace = true
edition.workspace = true

[dependencies]
db      = { path = "../db" }
printer = { path = "../printer" }
rusqlite = { version = "0.37.0", features = ["bundled"] }
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
tokio.workspace = true
