[package]
name = "log"
version = "0.3.0"
authors.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json", "chrono"] }
tracing-appender = "0.2.3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
db = { path = "../db" }
once_cell = "1.19" # Added dependency
