[package]
name = "notes"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
project = { version = "0.1.0", path = "../project" }
todo = { version = "0.1.0", path = "../todo" }
