[package]
name = "notes"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
rusqlite = { version = "0.37.0", features = ["bundled"] }
db = { path = "../db" }
printer = { path = "../printer" }
