[package]
name = "project"
version = "0.4.0"
authors.workspace = true
edition.workspace = true

[dependencies]
db    = { path = "../db" }
lists = { path = "../lists" }
notes = { path = "../notes" }
todo  = { path = "../todo" }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde.workspace = true
tokio.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
