[package]
name = "todo"
version = "0.9.0"
authors.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
toml.workspace = true
db      = { path = "../db" }
printer = { path = "../printer" }
notes   = { path = "../notes" }
