[package]
name = "tui"
version = "0.4.0"
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json", "chrono"] }
tracing-appender = "0.2.3"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono = { workspace = true }

# TUI Dependencies
ratatui = "0.27"
crossterm = "0.27"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
urlencoding = "2"
