[package]
name = "vikunja"
version = "0.3.0"
authors.workspace = true
edition.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
serde.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
anyhow.workspace = true
